fix: incorrect size of "ready"-screen
The one that tells the first player to put their
ships in desired positions. It was overflowing
to the row numbers.

--- a/src/style.css
+++ b/src/style.css
@@ -169,7 +169,8 @@ form {
 .square.sunk {
   background: grey;
 }
-.board {
+.board,
+.board-enemy {
   position: relative;
 }
 #hand-over-one[open],
